--- a/about.html
+++ b/about.html
@@ -18,17 +18,10 @@
         <main class="apresentacao">
             <section class="apresentacao-conteudo">
                 <h1 class="apresentacao-conteudo-titulo">Sobre Mim</h1>
-                <p class="apresentacao-conteudo-texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nulla, adipisci pariatur repellendus in nesciunt sequi ipsum quas quisquam? Soluta perspiciatis voluptas ullam corporis recusandae nihil amet odio in reprehenderit.
-                Minima voluptatibus sapiente eos, laboriosam nemo aut incidunt laudantium amet voluptatem temporibus! Corporis culpa qui doloremque, tenetur repellendus in odio consequatur atque ratione odit quia totam. Natus nam accusamus aliquam.
-                Assumenda labore non ea aliquam blanditiis eum fugiat cumque at omnis voluptas praesentium perspiciatis, modi id porro minima dignissimos reiciendis nesciunt soluta nam consequatur asperiores. In incidunt ratione dolores autem.
-                Aliquam unde autem aut quod tenetur esse assumenda enim vel, veniam nobis impedit suscipit voluptate eos voluptatibus cumque hic reiciendis pariatur officia dolorem sint rerum distinctio ex dolores? Accusamus, quisquam.
-                </p>
-                
-                <p class="apresentacao-conteudo-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quaerat laboriosam! Aliquid, porro! Quae, reiciendis? Libero officia iure optio repellendus sapiente odio necessitatibus culpa itaque cupiditate. Excepturi, et. Facere, voluptatibus?
-                Aliquid, itaque tenetur rem iusto libero eos aliquam dicta, esse, corrupti eum excepturi repudiandae explicabo necessitatibus quae numquam nostrum fugit magni. Soluta illum corporis cum dolore nihil, excepturi similique veritatis?
-                In non enim incidunt aut sunt possimus assumenda, tenetur, repudiandae impedit minus ipsam consectetur. A totam praesentium quas autem sequi velit ex maxime in, odit magni. Ex non quia eius.
-                Aliquid cumque, accusamus distinctio a incidunt ipsam praesentium fugit. Harum, nihil? Possimus architecto, praesentium, soluta nostrum neque labore officiis vero, officia quae rem quidem consequuntur deleniti tenetur recusandae quisquam minus.
-                </p>
+                <p class="apresentacao-conteudo-texto">Olá tenho 19 anos, sou técnico em TI pelo SENAC, e no momento curso Análise e Desenvolvimento de Sistemas na FIAP. 
+                    Possuo disponibilidade de horários, perfil persistente para aprender novos conceitos em pouco tempo e comprometimento para novas oportunidades.</p>
+                <p class="apresentacao-conteudo-texto">Possuo conhecimentos na parte de Front-end: HTML, CSS, JavaScript, e em Back-end: Java e MySQL. 
+                    Atualmente sigo estudando as tecnologias com foco em Back-end: React, JavaScript, NodeJS e Python.</p>
             </section>
             <img class="fotopessoal" src="assets/img/fotopessoal2.jpeg" alt="foto-pessoal">
         </main>
