--- a/about.html
+++ b/about.html
@@ -18,10 +18,8 @@
         <main class="apresentacao">
             <section class="apresentacao-conteudo">
                 <h1 class="apresentacao-conteudo-titulo">Sobre Mim</h1>
-                <p class="apresentacao-conteudo-texto">Olá tenho 19 anos, sou técnico em TI pelo SENAC, e no momento curso Análise e Desenvolvimento de Sistemas na FIAP. 
-                    Possuo disponibilidade de horários, perfil persistente para aprender novos conceitos em pouco tempo e comprometimento para novas oportunidades.</p>
-                <p class="apresentacao-conteudo-texto">Possuo conhecimentos na parte de Front-end: HTML, CSS, JavaScript, e em Back-end: Java e MySQL. 
-                    Atualmente sigo estudando as tecnologias com foco em Back-end: React, JavaScript, NodeJS e Python.</p>
+                <p class="apresentacao-conteudo-texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore obcaecati cupiditate ipsa ex deserunt, est cumque fugiat laborum! Eveniet sapiente omnis reprehenderit quia deleniti aut assumenda minus voluptatum aliquid nihil.</p>
+                <p class="apresentacao-conteudo-texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro, explicabo. Placeat, aliquam sapiente ipsam nam quo velit vero nisi molestias rem! Tempora voluptatem voluptas unde possimus similique placeat ea perspiciatis!</p>
             </section>
             <img class="fotopessoal" src="assets/img/fotopessoal2.jpeg" alt="foto-pessoal">
         </main>
